--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -443,7 +443,7 @@ Navbar CSS
   position: absolute;
   top: 80px;
   left: 0;
-  width: 200px;
+  width: 250px;
   z-index: 99;
   padding-top: 20px;
   padding-left: 5px;
@@ -3874,17 +3874,22 @@ Why Choose US CSS
 
 .why-choose-us-image img:nth-child(1) {
   position: relative;
-  left: -20px;
 }
 
-.why-choose-us-image img:nth-child(3) {
+.why-choose-us-image img:nth-child(2) {
+  position: relative;
+}
+
+.why-choose-us-image img {
   position: absolute;
-  top: -55px;
-  right: 0;
+}
+
+.why-choose-us-image img.bg-image {
+  top: -50px;
   left: 0;
+  right: 0;
   margin: 0 auto;
-  z-index: -1;
-  animation-duration: 20s;
+  text-align: center;
 }
 
 .why-choose-us-image.single-why-choose-us-image img {
@@ -5387,4 +5392,207 @@ IoT Why Choose Us CSS
 .single-iot-box:hover a, .single-iot-box:focus a {
   background-color: var(--main-color);
   color: #ffffff;
+}
+
+
+/*================================================
+ML Services CSS
+=================================================*/
+.ml-services-area {
+  padding-bottom: 50px;
+  position: relative;
+  z-index: 1;
+  background: -webkit-gradient(linear, right top, left bottom, from(#fffcff), color-stop(#fbfaff), color-stop(#effbff), color-stop(#e0fdff), to(#d5fefd));
+  background: linear-gradient(to left bottom, #fffcff, #fbfaff, #effbff, #e0fdff, #d5fefd);
+}
+
+.single-ml-services-box {
+  position: relative;
+  z-index: 1;
+  background-color: #ffffff;
+  text-align: center;
+  margin-bottom: 30px;
+  padding: 30px 25px;
+  overflow: hidden;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.single-ml-services-box .image {
+  margin-bottom: 25px;
+}
+
+.single-ml-services-box h3 {
+  font-size: 18px;
+  margin-bottom: 12px;
+}
+
+.single-ml-services-box p {
+  margin-bottom: 0;
+}
+
+.single-ml-services-box::before {
+  content: '';
+  position: absolute;
+  left: -15px;
+  bottom: -15px;
+  width: 30px;
+  height: 30px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  background: #44ce6f;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.single-ml-services-box:hover::before {
+  opacity: 1;
+  visibility: visible;
+}
+
+/*================================================
+ML Feedback CSS
+=================================================*/
+.ml-feedback-area {
+  background: -webkit-gradient(linear, left bottom, right top, from(#d5fefd), color-stop(#e0fdff), color-stop(#effbff), color-stop(#fbfaff), to(#fffcff));
+  background: linear-gradient(to right top, #d5fefd, #e0fdff, #effbff, #fbfaff, #fffcff);
+  position: relative;
+  z-index: 1;
+  padding-bottom: 50px;
+}
+
+.single-ml-feedback-item {
+  -webkit-box-shadow: 0 0 25px 3px rgba(0, 0, 0, 0.04);
+          box-shadow: 0 0 25px 3px rgba(0, 0, 0, 0.04);
+  margin-bottom: 45px;
+  background-color: #ffffff;
+  position: relative;
+  padding: 60px 70px 60px 190px;
+  border-radius: 5px;
+}
+
+.single-ml-feedback-item .client-info {
+  position: absolute;
+  left: 60px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  text-align: center;
+}
+
+.single-ml-feedback-item .client-info img {
+  border-radius: 5px;
+  border: 2px solid #f4f5fe;
+  width: 80px !important;
+  height: 80px !important;
+  padding: 5px;
+  display: inline-block !important;
+}
+
+.single-ml-feedback-item .client-info h3 {
+  margin-bottom: 0;
+  margin-top: 10px;
+  font-size: 17px;
+}
+
+.single-ml-feedback-item .client-info span {
+  display: block;
+  color: #c679e3;
+  margin-top: 5px;
+  font-size: 13px;
+}
+
+.single-ml-feedback-item p {
+  margin-bottom: 0;
+  color: #4a6f8a;
+}
+
+.single-ml-feedback-item .rating {
+  margin-top: 10px;
+}
+
+.single-ml-feedback-item .rating svg {
+  color: #ff612f;
+  width: 18px;
+}
+
+.single-ml-feedback-item::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  border-radius: 5px;
+  bottom: -15px;
+  background-color: #ffffff;
+  -webkit-box-shadow: 0px 15px 10px -15px rgba(0, 0, 0, 0.04);
+          box-shadow: 0px 15px 10px -15px rgba(0, 0, 0, 0.04);
+  z-index: -1;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.ml-feedback-slides {
+  max-width: 750px;
+  margin: -40px auto 0;
+}
+
+.ml-feedback-slides .single-ml-feedback-item {
+  margin-top: 40px;
+}
+
+.ml-feedback-slides .owl-item {
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+.ml-feedback-slides .owl-dots {
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 30px;
+}
+
+.ml-feedback-slides .owl-dots .owl-dot {
+  display: inline-block;
+}
+
+.ml-feedback-slides .owl-dots .owl-dot span {
+  width: 15px;
+  height: 15px;
+  margin: 0 3px;
+  background: transparent;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  border: 1px solid #8d95a7;
+  border-radius: 50%;
+  position: relative;
+  display: inline-block;
+}
+
+.ml-feedback-slides .owl-dots .owl-dot span::before {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: #44ce6f;
+  margin: 2px;
+  content: '';
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  border-radius: 50%;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+}
+
+.ml-feedback-slides .owl-dots .owl-dot:hover span, .ml-feedback-slides .owl-dots .owl-dot.active span {
+  border-color: #44ce6f;
+  background-color: transparent;
+}
+
+.ml-feedback-slides .owl-dots .owl-dot:hover span::before, .ml-feedback-slides .owl-dots .owl-dot.active span::before {
+  -webkit-transform: scale(1);
+          transform: scale(1);
 }
