--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -729,6 +729,19 @@
       padding-top: 20px;
       padding-bottom: 20px;
     }
+    .ml-banner-image {
+      height: auto;
+      top: 0;
+      margin-top: 30px;
+      text-align: center;
+    }
+    .ml-banner-image img {
+      display: none;
+      position: relative;
+    }
+    .ml-banner-image img:nth-child(12) {
+      display: inline-block;
+    }
   }
   
   @media only screen and (min-width: 768px) and (max-width: 991px) {
